[package]
name = "rust-sudoku-api"
version = "0.1.0"
authors = ["Richard Hess <eswat2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.2"
actix-rt = "2.2.0"
base64 = "0.13.0"
serde_json = "1.0.64"
sudoku = "0.7.0"
