[package]
name = "rust-sudoku-api"
version = "0.1.0"
authors = ["Richard Hess <eswat2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.7.0"
actix-web = "4.0.1"
base64 = "0.22.0"
serde_json = "1.0.64"
sudoku = "0.8.0"
